[gd_scene load_steps=5 format=3 uid="uid://34fkmw4iqwaf"]

[ext_resource type="Script" path="res://ItemShop.gd" id="1_s4ujq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glvue"]
bg_color = Color(0.682353, 0.8, 0.901961, 1)

[sub_resource type="Animation" id="Animation_2mnru"]
resource_name = "popUpDice"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d273h"]
_data = {
"popUpShop": SubResource("Animation_2mnru")
}

[node name="Node2D" type="Node2D"]

[node name="ItemShop" type="Node2D" parent="."]
script = ExtResource("1_s4ujq")

[node name="Panel" type="Panel" parent="ItemShop"]
offset_left = 184.0
offset_top = 118.0
offset_right = 986.0
offset_bottom = 536.0
pivot_offset = Vector2(336, 166)

[node name="Label" type="Label" parent="ItemShop/Panel"]
layout_mode = 0
offset_left = 30.0
offset_top = 59.0
offset_right = 783.0
offset_bottom = 205.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "Select your item"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Item1" type="Button" parent="ItemShop/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.342
anchor_top = 1.167
anchor_right = 0.342
anchor_bottom = 1.167
offset_left = -180.784
offset_top = -290.139
offset_right = -45.784
offset_bottom = -174.139
pivot_offset = Vector2(43, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxFlat_glvue")
action_mode = 0
text = "1
20€"

[node name="Item2" type="Button" parent="ItemShop/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.342
anchor_top = 1.167
anchor_right = 0.342
anchor_bottom = 1.167
offset_left = -24.9507
offset_top = -293.473
offset_right = 110.049
offset_bottom = -177.473
pivot_offset = Vector2(43, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxFlat_glvue")
action_mode = 0
text = "2
100€"

[node name="Item3" type="Button" parent="ItemShop/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.342
anchor_top = 1.167
anchor_right = 0.342
anchor_bottom = 1.167
offset_left = 125.049
offset_top = -293.473
offset_right = 260.049
offset_bottom = -177.473
pivot_offset = Vector2(43, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxFlat_glvue")
action_mode = 0
text = "3
30€"

[node name="Item4" type="Button" parent="ItemShop/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.342
anchor_top = 1.167
anchor_right = 0.342
anchor_bottom = 1.167
offset_left = 291.716
offset_top = -293.473
offset_right = 426.716
offset_bottom = -177.473
pivot_offset = Vector2(43, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxFlat_glvue")
action_mode = 0
text = "4
40€"

[node name="ExitButton" type="Button" parent="ItemShop/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.342
anchor_top = 1.167
anchor_right = 0.342
anchor_bottom = 1.167
offset_left = 79.716
offset_top = -155.806
offset_right = 161.716
offset_bottom = -97.806
pivot_offset = Vector2(43, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxFlat_glvue")
action_mode = 0
text = "exit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="ItemShop/Panel"]
libraries = {
"": SubResource("AnimationLibrary_d273h")
}

[connection signal="pressed" from="ItemShop/Panel/Item1" to="ItemShop" method="_on_item_1_pressed"]
[connection signal="pressed" from="ItemShop/Panel/Item2" to="ItemShop" method="_on_item_2_pressed"]
[connection signal="pressed" from="ItemShop/Panel/Item3" to="ItemShop" method="_on_item_3_pressed"]
[connection signal="pressed" from="ItemShop/Panel/Item4" to="ItemShop" method="_on_item_4_pressed"]
[connection signal="pressed" from="ItemShop/Panel/ExitButton" to="ItemShop" method="_on_exit_button_pressed"]
